# Blink-hash

./: BLINK_HASH_CODE_GUIDE.md  IMPLEMENTATION_SEQUENCE.md  POSTGRESQL_INTEGRATION.md
index/blink-hash-pg/: ASYNC_CONVERSION.md  CMakeLists.txt  SPLIT_PRUNING.md  SPLIT_PRUNING_PROGRESS_SUMMARY.md  fix.md  run_benchmark.sh  run_latency.sh  split_pruning_meta_20260312_080454.txt  toefixed.txt
index/blink-hash-pg/benchmark_results/: bench_20260308_135905.txt  bench_20260308_140318.txt  bench_20260308_140348.txt  bench_20260308_140546.txt  bench_20260308_154536.txt  bench_20260308_170859.txt
index/blink-hash-pg/lib/: CMakeLists.txt  bh_key.h  bucket.h  common.h  hash.cpp  inode.cpp  inode.h  lnode.cpp  lnode.h  lnode_btree.cpp  lnode_hash.cpp  node.h  tree.cpp  tree.h
index/blink-hash-pg/pg_blinkhash/: Makefile  blinkhash--1.0.sql  blinkhash.control  blinkhash.dylib
index/blink-hash-pg/pg_blinkhash/src/: blinkhash_am.c  blinkhash_am.h  blinkhash_build.c  blinkhash_build.h  blinkhash_core.cpp  blinkhash_core.h  blinkhash_cost.c  blinkhash_cost.h  blinkhash_handler.c  blinkhash_handler.h  blinkhash_insert.c  blinkhash_insert.h  blinkhash_page.c  blinkhash_page.h  blinkhash_scan.c  blinkhash_scan.h  blinkhash_utils.c  blinkhash_utils.h  blinkhash_vacuum.c  blinkhash_vacuum.h  blinkhash_validate.c  blinkhash_validate.h  blinkhash_wal.c  blinkhash_wal.h
index/blink-hash-pg/scripts/: bench_timeseries.sh
index/blink-hash-pg/test/: CMakeLists.txt  bench_convert_count.cpp  bench_range_latency.cpp  bench_range_throughput.cpp  bench_wal_commit_latency.cpp  mixed.cpp  range.cpp  rdtsc.cpp  test.cpp  test_bucket_metadata.cpp  test_buffer_pool.cpp  test_node_map.cpp  test_pg_bridge.cpp  test_pg_wal_bridge.cpp  test_range_debug.cpp  test_split_pruning.cpp  test_string.cpp  test_wal_checkpoint.cpp  test_wal_e2e.cpp  test_wal_hooks.cpp  test_wal_record.cpp  test_wal_recovery.cpp  test_wal_ring.cpp  timestamp.cpp
index/blink-hash-pg/wal/: CMakeLists.txt  bh_buffer_pool.cpp  bh_buffer_pool.h  bh_node_map.cpp  bh_node_map.h  bh_page.cpp  bh_page.h  wal_checkpoint.cpp  wal_checkpoint.h  wal_emitter.cpp  wal_emitter.h  wal_flusher.cpp  wal_flusher.h  wal_group_commit.cpp  wal_group_commit.h  wal_record.cpp  wal_record.h  wal_recovery.cpp  wal_recovery.h  wal_ring.cpp  wal_ring.h  wal_thread_buf.cpp  wal_thread_buf.h
index/blink-hash-str/lib/: lnode.cpp  lnode.h  tree.h
index/blink-hash/lib/: CMakeLists.txt  lnode_hash.cpp
